[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pywebflow"
description = "A Python-based web framework to create flow-based workflows."
dynamic = ["version"]
license = { file = "LICENSE", content-type = "text/plain" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["pywebflow", "workflow", "flow-based-programming", "flow", "python", "webflow", "framework"]
maintainers = [
  { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
authors = [
  { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "fastapi>=0.115.6,<0.116.0",
  "logly @ git+https://github.com/muhammad-fiaz/logly.git@9920c22e118facaa5f3145df0a9b4b9e9b9a8839",
  "uvicorn>=0.34.0,<0.35.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
source = "https://github.com/muhammad-fiaz/pywebflow.git"
homepage = "https://github.com/muhammad-fiaz/pywebflow#readme"
documentation = "https://github.com/muhammad-fiaz/pywebflow#readme"
repository = "https://github.com/muhammad-fiaz/pywebflow"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.5",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.hatch.build]
exclude = [
    "packages/**/*",
]
include = [
  "webflow/**/*",
  "scripts/**/*",
  "pywebflow/**/*",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
only-packages = true
artifacts = [
  "*.js",
  "*.css",
  "*.html",
  "*.ico",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv.pip]
extra = ["dev"]
python = "3.12"
output-file = "requirements.txt"

[tool.uv.sources]
logly = { git = "https://github.com/muhammad-fiaz/logly.git", rev = "9920c22e118facaa5f3145df0a9b4b9e9b9a8839" }

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.5"
]

[tool.uv]
cache-keys = [{ file = "requirements.txt" }]