[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pywebflow"
description = "A Python-based web framework to create flow-based workflows."
dynamic = ["version"]
license = { file = "LICENSE", content-type = "text/plain" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["pywebflow", "workflow", "flow-based-programming", "flow", "python", "webflow", "framework"]
maintainers = [
  { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
authors = [
  { name = "Muhammad Fiaz", email = "contact@muhammadfiaz.com" }
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "fastapi>=0.115.6,<0.116.0",
  "logly @ git+https://github.com/muhammad-fiaz/logly.git@9920c22e118facaa5f3145df0a9b4b9e9b9a8839",
  "uvicorn>=0.34.0,<0.35.0",
]

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

[project.urls]
source = "https://github.com/muhammad-fiaz/pywebflow.git"
homepage = "https://github.com/muhammad-fiaz/pywebflow#readme"
documentation = "https://github.com/muhammad-fiaz/pywebflow#readme"
repository = "https://github.com/muhammad-fiaz/pywebflow"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.5",
]

[tool.hatch.build.targets.sdist]
ignore-vcs = true

[tool.hatch.build]
exclude = [
    "packages/**/*",
]
include = [
  "webflow/**/*",
  "scripts/**/*",
  "pywebflow/**/*",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
only-packages = true
artifacts = [
  "*.js",
  "*.css",
  "*.html",
  "*.ico",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
metadata = false
style = "semver"
latest-tag = true
bump = true


[tool.hatch.build.hooks.version]
path = "webflow/__version__.py"
template = '''
version = "{version}"
'''


[tool.uv.pip]
extra = ["dev"]
python = "3.12"
output-file = "requirements.txt"

[tool.uv.sources]
logly = { git = "https://github.com/muhammad-fiaz/logly.git", rev = "9920c22e118facaa5f3145df0a9b4b9e9b9a8839" }

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.5"
]

[tool.uv]
cache-keys = [{ file = "requirements.txt" }]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--no-cov-on-fail"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == \"__main__\":",
  "pragma: no cover",
]

[tool.ruff]
line-length = 100
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle (formatting issues)
  "B",  # flake8-bugbear (common bugs)
  "W",  # warnings
  "F",  # pyflakes (error detection)
  "UP",  # pyupgrade (outdated syntax)
  "I001",  # unsorted imports
  "T201",  # print found
  "T203",  # pprint found
  "RUF022",  # Unsorted __all__
  "RUF023",  # Unsorted __slots__
]
ignore = [
  "E501",   # Line too long (handled by formatter)
  "W191",   # Indentation contains tabs
  "E111",   # Indentation is not a multiple of four
  "E114",   # Indentation is not a multiple of four (comment)
  "E117",   # Over-indented
  "D206",   # Docstring indentation error
  "D300",   # Triple double quotes required
  "Q000",   # Bad quotes
  "Q001",   # Bad quotes
  "Q002",   # Bad quotes
  "Q003",   # Bad quotes
  "COM812", # Trailing comma missing
  "COM819", # Trailing comma unexpected
  "ISC001", # String concatenation error
  "ISC002", # String formatting issue
]
